<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF5F3" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/dsignup_updation_txt_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_name" />

            <EditText
                android:id="@+id/dsignup_updation_edt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_name"
                android:maxLength="50" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_age" />

            <EditText
                android:id="@+id/dsignup_updation_edt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_age"
                android:maxLength="3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_gender" />

            <Spinner
                android:id="@+id/spn_d_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_specialist" />

            <EditText
                android:id="@+id/dsignup_updation_edt_specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_specialist"
                android:maxLength="50" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_mobileno" />

            <EditText
                android:id="@+id/dsignup_updation_edt_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_mobileno"
                android:inputType="number"
                android:maxLength="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_landlineno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_landlineno" />

            <EditText
                android:id="@+id/dsignup_updation_edt_landlineno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_landlineno"
                android:inputType="number"
                android:maxLength="15" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_email" />

            <EditText
                android:id="@+id/dsignup_updation_edt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_email"
                android:maxLength="50" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dsignup_updation_txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_address" />

            <EditText
                android:id="@+id/dsignup_updation_edt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dsignup_updation_hnt_address"
                android:maxLength="100" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <TextView
                android:id="@+id/dsignup_updation_txt_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_txt_photo" />

            <Button
                android:id="@+id/dsignup_updation_btn_add"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsignup_updation_btn_add" />
        </TableRow>

        <TableRow
            android:id="@+id/tblUpdateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/dsignup_updation_btn_update"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE" />
        </TableRow>

        <TableRow
            android:id="@+id/tblActiveRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/dsignup_updation_btn_active"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ACTIVE" />
        </TableRow>
    </TableLayout>

</ScrollView>