<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF5F3" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/psignup_txt_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/psignup_txt_fullname" />

            <EditText
                android:id="@+id/psignup_edt_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/psignup_hnt_fullname"
                android:maxLength="50" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psignup_txt_mobileno" />

            <EditText
                android:id="@+id/psignup_edt_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10" 
                android:inputType="number"
                android:hint="@string/psignup_hnt_mobileno"
 
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psignup_txt_username" />

            <EditText
                android:id="@+id/psignup_edt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="25" 
                android:hint="@string/psignup_hnt_username"
 
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psignup_txt_password" />

            <EditText
                android:id="@+id/psignup_edt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="25" 
                android:hint="@string/psignup_hnt_password"
 
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
>

            <Button
                android:id="@+id/psignup_btn_signup"
                style="@style/button"
                android:layout_span="2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psignup_btn_signup" />
        </TableRow>
    </TableLayout>

</ScrollView>